--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    height: 100vh;
+    width: 100vw;
 }
 
 .hero {
@@ -80,4 +82,36 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    width: 10em;
+    gap: 50px;
+}
+
+.some-class {
+    border: 4px solid #3882f6;
+    height: 10em;
+    width: 10em;
+    border-radius: 10px;
+}
+
+#information {
+    padding-left: 260px;
+    padding-right: 260px;
+}
+
+.subtext {
+    font-size: 18px;
+    color:rgba(103, 103, 103);
+    text-align: center;
 }
